Fix switch assets not showing on gnome 3.32

--- a/src/sass/gnome-shell-sass/_common.scss
+++ b/src/sass/gnome-shell-sass/_common.scss
@@ -215,15 +215,14 @@ StScrollBar {
   width: 3.43em;
   height: 1.5em;
   background-size: contain;
+  background-image: url("assets/toggle-off.svg");
+  &:checked { background-image: url("assets/toggle-on.svg"); }
 }
 
 @each $v in us, intl {
   .toggle-switch-#{$v} {
     background-image: url("assets/toggle-off.svg");
-
-    &:checked {
-      background-image: url("assets/toggle-on.svg");
-    }
+    &:checked { background-image: url("assets/toggle-on.svg"); }
   }
 }
 
